--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,30 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.1.0/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js"></script>
+    ;
+    <script type="module">
+      // Import the functions you need from the SDKs you need
+
+      // TODO: Add SDKs for Firebase products that you want to use
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      // Your web app's Firebase configuration
+      const firebaseConfig = {
+        apiKey: "AIzaSyB4kl3KvTnwhtclaGn_VRpd0XSDcEdTgVY",
+        authDomain: "byu-i-comments.firebaseapp.com",
+        databaseURL: "https://byu-i-comments-default-rtdb.firebaseio.com",
+        projectId: "byu-i-comments",
+        storageBucket: "byu-i-comments.appspot.com",
+        messagingSenderId: "382567625734",
+        appId: "1:382567625734:web:b91b4ba5eb3a0924883f87",
+      };
+
+      // Initialize Firebase
+      const app = initializeApp(firebaseConfig);
+    </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
